--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,34 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"capri-stok","appId":"1:341210438642:android:f305483d616d3e4cf7296b","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"capri-stok","configurations":{"android":"1:341210438642:android:f305483d616d3e4cf7296b"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "capri-stok",
+          "appId": "1:341210438642:android:f305483d616d3e4cf7296b",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "capri-stok",
+          "configurations": {
+            "android": "1:341210438642:android:f305483d616d3e4cf7296b"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ]
+}
