--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^4.0.0
-  cloud_firestore: ^6.0.0
-  firebase_auth: ^6.0.0
+  firebase_core: ^4.1.0
+  cloud_firestore: ^6.0.1
+  firebase_auth: ^6.0.2
   uuid: ^4.5.1
   intl: ^0.20.2
   fl_chart: ^1.0.0
@@ -47,6 +47,10 @@ dependencies:
   image_picker: ^1.1.2
   flutter_launcher_icons: ^0.14.4
   firebase_storage: ^13.0.1
+  firebase_messaging: ^16.0.1
+  flutter_local_notifications: ^19.4.1
+  url_launcher: ^6.3.0
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
