--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_local_notifications: ^19.4.1
   url_launcher: ^6.3.0
   package_info_plus: ^8.0.0
+  cloud_functions: ^6.0.2
 
 dev_dependencies:
   flutter_test:
