--- a/firebase.json
+++ b/firebase.json
@@ -1,34 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "capri-stok",
-          "appId": "1:341210438642:android:f305483d616d3e4cf7296b",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "capri-stok",
-          "configurations": {
-            "android": "1:341210438642:android:f305483d616d3e4cf7296b"
-          }
-        }
-      }
-    }
-  },
-  "functions": [
-    {
-      "source": "functions",
-      "codebase": "default",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
-      ]
-    }
-  ]
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"capri-stok","appId":"1:341210438642:android:f305483d616d3e4cf7296b","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"capri-stok","configurations":{"android":"1:341210438642:android:f305483d616d3e4cf7296b","ios":"1:341210438642:ios:766bb336fb5eb85cf7296b","windows":"1:341210438642:web:e1900d3b43bf8501f7296b"}}}}},"functions":[{"source":"functions","codebase":"default","ignore":["node_modules",".git","firebase-debug.log","firebase-debug.*.log","*.local"]}]}
