--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.3.0
   package_info_plus: ^8.0.0
   cloud_functions: ^6.0.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
