--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   package_info_plus: ^8.0.0
   cloud_functions: ^6.0.2
   shared_preferences: ^2.5.3
+  firebase_app_check: ^0.4.1+1
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
